--- a/manuscript/ms.html
+++ b/manuscript/ms.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Daijiang Li1,2†‡, Sydne Record3†, Eric Sokol4,5†‡, Matthew E. Bitters6, Melissa Y. Chen6, Anny Y. Chung7, Matthew R. Helmus8, Ruvi Jaimes9, Lara Jansen10, Marta A. Jarzyna11,12, Michael G. Just13, Jalene M. LaMontagne14, Brett Melbourne6, Wynne Moss6, Kari Norman15, Stephanie Parker4, Natalie Robinson4, Bijan Seyednasrollah16, Colin Smith17, Sarah Spaulding5, Thilina Surasinghe18, Sarah Thomsen19, Phoebe Zarnetske20,21" />
+<meta name="author" content="Daijiang Li1,2†‡, Sydne Record3†‡, Eric Sokol4,5†‡, Matthew E. Bitters6, Melissa Y. Chen6, Anny Y. Chung7, Matthew R. Helmus8, Ruvi Jaimes9, Lara Jansen10, Marta A. Jarzyna11,12, Michael G. Just13, Jalene M. LaMontagne14, Brett Melbourne6, Wynne Moss6, Kari Norman15, Stephanie Parker4, Natalie Robinson4, Bijan Seyednasrollah16, Colin Smith17, Sarah Spaulding5, Thilina Surasinghe18, Sarah Thomsen19, Phoebe Zarnetske20,21" />
 
 
 <title>Standardized NEON organismal data for biodiversity research</title>
@@ -213,7 +213,7 @@ summary {
 
 
 <h1 class="title toc-ignore">Standardized NEON organismal data for biodiversity research</h1>
-<h4 class="author">Daijiang Li<sup>1,2†‡</sup>, Sydne Record<sup>3†</sup>, Eric Sokol<sup>4,5†‡</sup>, Matthew E. Bitters<sup>6</sup>, Melissa Y. Chen<sup>6</sup>, Anny Y. Chung<sup>7</sup>, Matthew R. Helmus<sup>8</sup>, Ruvi Jaimes<sup>9</sup>, Lara Jansen<sup>10</sup>, Marta A. Jarzyna<sup>11,12</sup>, Michael G. Just<sup>13</sup>, Jalene M. LaMontagne<sup>14</sup>, Brett Melbourne<sup>6</sup>, Wynne Moss<sup>6</sup>, Kari Norman<sup>15</sup>, Stephanie Parker<sup>4</sup>, Natalie Robinson<sup>4</sup>, Bijan Seyednasrollah<sup>16</sup>, Colin Smith<sup>17</sup>, Sarah Spaulding<sup>5</sup>, Thilina Surasinghe<sup>18</sup>, Sarah Thomsen<sup>19</sup>, Phoebe Zarnetske<sup>20,21</sup></h4>
+<h4 class="author">Daijiang Li<sup>1,2†‡</sup>, Sydne Record<sup>3†‡</sup>, Eric Sokol<sup>4,5†‡</sup>, Matthew E. Bitters<sup>6</sup>, Melissa Y. Chen<sup>6</sup>, Anny Y. Chung<sup>7</sup>, Matthew R. Helmus<sup>8</sup>, Ruvi Jaimes<sup>9</sup>, Lara Jansen<sup>10</sup>, Marta A. Jarzyna<sup>11,12</sup>, Michael G. Just<sup>13</sup>, Jalene M. LaMontagne<sup>14</sup>, Brett Melbourne<sup>6</sup>, Wynne Moss<sup>6</sup>, Kari Norman<sup>15</sup>, Stephanie Parker<sup>4</sup>, Natalie Robinson<sup>4</sup>, Bijan Seyednasrollah<sup>16</sup>, Colin Smith<sup>17</sup>, Sarah Spaulding<sup>5</sup>, Thilina Surasinghe<sup>18</sup>, Sarah Thomsen<sup>19</sup>, Phoebe Zarnetske<sup>20,21</sup></h4>
 <h4 class="date">14 March, 2021</h4>
 
 </div>
